<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Area63</string>
    <string name="app_name_open">Area63 - AcFun Article</string>
    <string name="action_settings">Settings</string>
    <string name="action_view_mode">Reading Mode</string>
    <string name="action_search">Search</string>
    <string name="view_mode_mix">Normal</string>
    <string name="view_mode_no_image">No picture</string>
    <string name="view_mode_comic">Gallery</string>
    <string name="user_name">User name</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="time_out">Time out! Tap to reload.</string>
    <string name="loading">Loading…</string>
    <string name="hide_requote">Repeated quotes have been hidden</string>
    <string name="no_more">(=ﾟωﾟ)= No more</string>
    <string name="reloading">Tap to reload…</string>
    <string name="no_comment_yet">No comment…</string>
    <string name="post_comment">Comment</string>
    <string name="action_bar_share">Share</string>
    <string name="action_bar_fov">Favorite</string>
    <string name="action_bar_comment">Comment</string>
    <string name="action_bar_save">Save to Pictures Folder</string>
    <string name="pull_to_retry">Pull to retry</string>
    <string name="donate_url">https://m.alipay.com/personal/payment.htm?reason=BUY ME A CUP OF COFFEE &amp;amount=5&amp;userId=2088002476381643&amp;weChat=true</string>
    <string name="about_url">http://yrom.sinaapp.com/ac_a63.html</string>
    <string name="umeng_fb_powered_by">powered by</string>
    <string name="key_clear_cache">clear_cache</string>
    <string name="key_image_cache">image_cache</string>
    <string name="key_num_of_floor">num_of_floor</string>
    <string name="key_update">update</string>
    <string name="key_about">about</string>
    <string name="key_rating">rating</string>
    <string name="key_feedback">feedback</string>
    <string name="key_donate">donate</string>
    <string name="comment_hint">不吐嘈不舒服斯基</string>
    <string name="key_enable_vibrator">enable_vibrator</string>
    <string name="key_enable_mention">mention_enable</string>
    <string name="key_enable_mention_wifi_only">mention_enable_wifi_only</string>
    <string name="key_mention_interval">mention_interval</string>
    <string name="sign_in_first">Sigin!</string>
    <string name="no_comment">Nothing!</string>
    <string name="comment_not_enough">Not Enough</string>
    <string name="comment_font_size">Font Size of Comments</string>
    <string name="font_size">Font Size</string>
    <string name="comment_success">Comment Success!</string>
    <string name="comment_failed">Comment Failed!</string>
    <string name="posting_comment">Posting…</string>
    <string name="no_desc">No description…</string>
    <string name="new_replay">New Reply</string>
    <string name="mentions">Mentions</string>
    <string name="no_data_need_retry">May not download the data, Retry Pls!</string>
    <string name="save_success">Saved</string>
    <string name="save_failed">Failed. Retry LATER!</string>
    <string name="pofile">Profile</string>
    <string name="check_in_success">Checked in!</string>
    <string name="check_in_failed">Failed：</string>
    <string name="retry_pls">Retry Pls.</string>
    <string name="key_enable_night">is_night_mode</string>
    <string name="need_relaunch">Need to relaunch（￣艸￣)</string>
    <string name="clear_cache">Clear cache</string>
    <string name="night_mode">Night Mode</string>
    <string name="has_been_moved_to_drawer">Already moved to the left drawer</string>
    <string name="buy_me_coffee">Buy me A Cup Of Coffee</string>
    <string name="donate">Donate!</string>
    <string name="others">Others</string>
    <string name="about">About</string>
    <string name="wifi_only">WIFI Only</string>
    <string name="rating">Rating!</string>
    <string name="feed_back">Feedback</string>
    <string name="pic_path">Pictures Folder</string>
    <string name="update">Update</string>
    <string name="mention_enable">Inspect Mentions</string>
    <string name="mention_interval">Interval</string>
    <string name="vibrator_enable">Vibration feedback</string>
    <string name="vibrator_back">Vibration on Swiping Back</string>
    <string name="search_hint">Keywords</string>
    <string name="account_expired">您的账户已过期！</string>
    <string name="msg_account_expired">过期后会出现无法评论、签到等问题，请注销后重新登录！</string>
    <string name="btn_ok">OK</string>
    <string name="logout">Log out</string>
    <string name="app_ac_video_link">http://www.coolapk.com/apk/tv.ac.fun</string>
</resources>
