<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="设置" >

    <PreferenceCategory android:title="设置" >
        <Preference
            android:key="@string/key_clear_cache"
            android:title="清空缓存" />

        <EditTextPreference
            android:key="@string/key_image_cache"
            android:title="图片保存路径" />

        <tv.acfun.a63.view.SeekBarPreference
            android:key="@string/key_num_of_floor"
            android:defaultValue="50"
            android:dialogMessage="请选择滑动最流畅的一档"
            android:max="150"
            android:negativeButtonText="@null"
            android:text="层"
            android:title="评论最大楼层数" />
        
        <Preference
            android:key="@string/key_update"
            android:title="检查更新" />
        <CheckBoxPreference 
            android:key="@string/key_enable_vibrator"
            android:title="震动反馈"
            android:summary="滑动返回时的反馈"
            android:defaultValue="true"
            />
    </PreferenceCategory>
    <PreferenceCategory 
        android:title="召唤"
        >
        <CheckBoxPreference 
            android:key="@string/key_enable_mention"
            android:title="启用召唤检查"
            android:defaultValue="true"
            />
        <CheckBoxPreference 
            android:key="@string/key_enable_mention_wifi_only"
            android:dependency="@string/key_enable_mention"
            android:title="仅在WIFI网络下检查"
            android:defaultValue="true"
            />
        <ListPreference
            android:dependency="@string/key_enable_mention"
            android:key="@string/key_mention_interval"
            android:title="检查间隔"
            android:entryValues="@array/value_interval"
            android:entries="@array/title_interval"
            android:defaultValue="15"
            />        
    </PreferenceCategory>
    <PreferenceCategory android:title="其他" >
        <Preference
            android:key="@string/key_about"
            android:title="关于" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/about_url" />
        </Preference>
        <Preference
            android:key="@string/key_rating"
            android:title="评分！" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="market://details?id=tv.acfun.a63" />
        </Preference>
        <Preference
            android:key="@string/key_feedback"
            android:title="反馈" />
        <Preference
            android:key="@string/key_donate"
            android:summary="帮我买杯咖啡吧- -"
            android:title="捐助开发者" >
            <intent
                android:action="android.intent.action.VIEW"
                android:data="@string/donate_url" />
        </Preference>
    </PreferenceCategory>

</PreferenceScreen>